--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-        I DONT KNOW WHAT I AM DOING GO TO A BETTER WEBSITE : GOONSITE.SE  
+        I DONT KNOW WHAT I AM DOING GO TO A BETTER WEBSITE : <a href="GOONSITE.SE">GOONSITE</a>  
     </h1>
 </body>
 </html>
