--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Zionaman Protfolio</title>
 </head>
 <body>
-    <h1 style="position: relative; left: 50px; right:  50;">
+    <h1 style="position: relative; left: 50px; right: 50px;">
     I DONT KNOW WHAT I AM DOING GO TO A BETTER WEBSITE : 
     <a href="https://goonsite.se">GOONSITE</a>
 </h1>
