--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zionaman Protfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="position: relative; left: 50px; right: 50px;">
+
+    <h1 style="margin-left: 10%; margin-top: 10%;">
     I DONT KNOW WHAT I AM DOING GO TO A BETTER WEBSITE : 
-    <a href="https://goonsite.se">GOONSITE</a>
-</h1>
+        <a href="https://goonsite.se">GOONSITE</a>
+    </h1>
+
 </body>
 </html>
