--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         <a href="https://goonsite.se">GOONSITE</a>
     </h1>
 
+    <P style="margin-left:  10%; margin-top: 15%; font-size: 20px;">
+
+        Hello people my name is the funny man with a plan.<br>
+        I come form the land of swedish fish and weed.<br>
+        I am a leader and programer of the unborn team
+    </P>
+
 </body>
 </html>
