adding fonts not final font

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head>  
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +11,15 @@
 <body>
 
     <h1 style="margin-left: 10%; margin-top: 10%;">
-    I DONT KNOW WHAT I AM DOING GO TO A BETTER WEBSITE : 
-        <a href="https://goonsite.se">GOONSITE</a>
+        Zion Martincich / Game Programmer
     </h1>
 
-    <P style="margin-left:  10%; margin-top: 15%; font-size: 20px;">
-
+     <H3 style="margin-left:  10%; margin-top: 5%; font-size: 20px;">ABOUT ME</H3>
+    <P style="margin-left: 10%; font-size: 20px;" >
         Hello people my name is the funny man with a plan.<br>
         I come form the land of swedish fish and weed.<br>
         I am a leader and programer of the unborn team
-    </P>
+    </P>    
 
 </body>
 </html>
