extra cahnges or somthing i am to tired man

--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>  
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zionaman Protfolio</title>
+    <title>Zionaman Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="nav-container">
+        <div class="nav-box">
+            <a href="Project1.html">PROJECTS</a>
+        </div>
+        <div class="nav-box">
+            <a href="skills.html">SKILLS</a>
+        </div>
+        <div class="nav-box">
+            <a href="contact.html">CONTACT</a>
+        </div>
+        <div class="nav-box">
+            <a href="resume.html">RESUME</a>
+        </div>
+    </div>
 
-    <h1 style="margin-left: 10%; margin-top: 10%;">
-        Zion Martincich / Game Programmer
-    </h1>
-
-     <H3 style="margin-left:  10%; margin-top: 5%; font-size: 20px;">ABOUT ME</H3>
-    <P style="margin-left: 10%; font-size: 20px;" >
-        Hello people my name is the funny man with a plan.<br>
-        I come form the land of swedish fish and weed.<br>
-        I am a leader and programer of the unborn team
-    </P>    
-
+    <div class="content">
+        <h1>
+            Zion Martincich / Game Programmer
+        </h1>
+        <h3>ABOUT ME</h3>
+        <p>
+            Hello people my name is the funny man with a plan.<br>
+            I come form the land of swedish fish and weed.<br>
+            I am a leader and programer of the unborn team
+        </p>
+    </div>
 </body>
 </html>
