--- a/index.html
+++ b/index.html
@@ -1,37 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zionaman Portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav-container">
-        <div class="nav-box">
-            <a href="Project1.html">PROJECTS</a>
-        </div>
-        <div class="nav-box">
-            <a href="skills.html">SKILLS</a>
-        </div>
-        <div class="nav-box">
-            <a href="contact.html">CONTACT</a>
-        </div>
-        <div class="nav-box">
-            <a href="resume.html">RESUME</a>
-        </div>
+    <div style="text-align: center;">
+    <p style="font-size: 300%; color: aliceblue; margin: 0%; margin-top: 5%;">Zion Martincich</p>
+    <p style="font-size: 150%; color: aliceblue; margin: 0%;"> Programer / Grafics Arts </p>
     </div>
 
-    <div class="content">
-        <h1>
-            Zion Martincich / Game Programmer
-        </h1>
-        <h3>ABOUT ME</h3>
-        <p>
-            Hello people my name is the funny man with a plan.<br>
-            I come form the land of swedish fish and weed.<br>
-            I am a leader and programer of the unborn team
-        </p>
+    <div style="text-align: start; margin-top: 10%; margin-left: 10%;">
+
+        <p style="font-size: 150%; color: aliceblue; margin: 0%;"> About me</p>
+        <p style="font-size: 100%; color: aliceblue; margin: 0%;"">I am a swedish program and grafic desinger. <br> i have studdyed game programing in lbs norra and on my free <br>time did freelanse grafics desing for several people and did some <br> part time as a midea head for a gaming group called sof tac gaming</p>
+
     </div>
 </body>
 </html>
