--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div style="text-align: center;">
-    <p style="font-size: 300%; color: aliceblue; margin: 0%; margin-top: 5%;">Zion Martincich</p>
-    <p style="font-size: 150%; color: aliceblue; margin: 0%;"> Programer / Grafics Arts </p>
+    <div class="name-title">
+        <p class="name">Zion Martincich</p>
+        <p class="title">Programer / Graphics Arts</p>
     </div>
 
-    <div style="text-align: start; margin-top: 10%; margin-left: 10%;">
-
-        <p style="font-size: 150%; color: aliceblue; margin: 0%;"> About me</p>
-        <p style="font-size: 100%; color: aliceblue; margin: 0%;"">I am a swedish program and grafic desinger. <br> i have studdyed game programing in lbs norra and on my free <br>time did freelanse grafics desing for several people and did some <br> part time as a midea head for a gaming group called sof tac gaming</p>
-
+    <div class="about">
+        <p class="section-title">About me</p>
+        <p class="section-text">
+            I am a Swedish programmer and graphic designer. <br>
+            I have studied game programming at LBS Norra, and in my free <br>
+            time did freelance graphic design for several people and worked <br>
+            part-time as a media head for a gaming group called SOF TAC Gaming.
+        </p>
     </div>
 </body>
 </html>
