--- a/index.html
+++ b/index.html
@@ -11,15 +11,36 @@
         <p class="name">Zion Martincich</p>
         <p class="title">Programer / Graphics Arts</p>
     </div>
+            <div class="container">
+        <div class="about">
+            <p class="section-title">About me</p>
+            <p class="section-text">
+                I am a Swedish programmer and graphic designer. <br>
+                I have studied game programming at LBS Norra, and in my free <br>
+                time did freelance graphic design for several people and worked <br>
+                part-time as a media head for a gaming group called SOF TAC Gaming.
+            </p>
+        </div>
 
-    <div class="about">
-        <p class="section-title">About me</p>
-        <p class="section-text">
-            I am a Swedish programmer and graphic designer. <br>
-            I have studied game programming at LBS Norra, and in my free <br>
-            time did freelance graphic design for several people and worked <br>
-            part-time as a media head for a gaming group called SOF TAC Gaming.
-        </p>
+        <div class="main-content">
+            <div class="projects">
+                <a href="Project1.html" class="project-card">
+                    <img src="IMG_4912.png" alt="Project 1">
+                    <p class="project-title">Project 1</p>
+                </a>
+                <a href="Project2.html" class="project-card">
+                    <img src="GTKIrI6WoAAodaG.jpg" alt="Project 2">
+                    <p class="project-title">Project 2</p>
+                </a>
+                <a href="Project3.html" class="project-card">
+                    <img src="Gl-6R5_XUAE_q1t.jpg" alt="Project 3">
+                    <p class="project-title">Project 3</p>
+                </a>
+                <a href="Project4.html" class="project-card">
+                    <img src="Gjq5w-PWgAA4akg.png" alt="Project 4">
+                    <p class="project-title">Project 4</p>
+                </a>
+            </div>
+        </div>
     </div>
-</body>
 </html>
