--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
         <p class="name">Zion Martincich</p>
         <p class="title">Programer / Graphics Arts</p>
     </div>
+        <div class="social-icons">
+        <a href="https://github.com/ZiondamanSE" target="_blank">
+            <img src="github-icon.png" alt="GitHub">
+        </a>
+        <a href="https://x.com/ziondaman_Sv" target="_blank">
+            <img src="twitter-icon.png" alt="Twitter">
+        </a>
+        <a href="https://www.linkedin.com/in/ziondaman" target="_blank">
+            <img src="linkedin-icon.png" alt="LinkedIn">
+        </a>
+        <a href="https://ziondaman.itch.io" target="_blank">
+            <img src="itchio-icon.png" alt="Itch.io">
+        </a>
+        <a href="https://www.youtube.com/@noizsv" target="_blank">
+            <img src="youtube-icon.png" alt="YouTube">
+        </a>
+    </div>
             <div class="container">
         <div class="about">
             <p class="section-title">About me</p>
