--- a/index.html
+++ b/index.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Zion Martincich</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="name-title">
-        <p class="name">Zion Martincich</p>
-        <p class="title">Programer / Graphics Arts</p>
-    </div>
-    
-    <div class="social-icons">
-        <a href="https://github.com/ZiondamanSE" target="_blank">GitHub</a>
-        <a href="https://x.com/ziondaman_Sv" target="_blank">Twitter</a>
-        <a href="https://www.linkedin.com/in/ziondaman" target="_blank">LinkedIn</a>
-        <a href="https://ziondaman.itch.io" target="_blank">Itch.io</a>
-        <a href="https://www.youtube.com/@noizsv" target="_blank">YouTube</a>
-    </div>
-            <div class="container">
-        <div class="about">
-            <p class="section-title">About me</p>
-            <p class="section-text">
-                I am a Swedish programmer and graphic designer. <br>
-                I have studied game programming at LBS Norra, and in my free <br>
-                time did freelance graphic design for several people and worked <br>
-                part-time as a media head for a gaming group called SOF TAC Gaming.
-            </p>
-        </div>
+  <div class="name-title">
+    <p class="name">Zion Martincich</p>
+    <p class="title">Programer / Graphics Arts</p>
+  </div>
 
-        <div class="main-content">
-            <div class="projects">
-                <a href="Project1.html" class="project-card">
-                    <img src="IMG_4912.png" alt="Project 1">
-                    <p class="project-title">Project 1</p>
-                </a>
-                <a href="Project2.html" class="project-card">
-                    <img src="GTKIrI6WoAAodaG.jpg" alt="Project 2">
-                    <p class="project-title">Project 2</p>
-                </a>
-                <a href="Project3.html" class="project-card">
-                    <img src="Gl-6R5_XUAE_q1t.jpg" alt="Project 3">
-                    <p class="project-title">Project 3</p>
-                </a>
-                <a href="Project4.html" class="project-card">
-                    <img src="Gjq5w-PWgAA4akg.png" alt="Project 4">
-                    <p class="project-title">Project 4</p>
-                </a>
-            </div>
-        </div>
+  <div class="social-icons">
+    <a href="https://github.com/ZiondamanSE" target="_blank">GitHub</a>
+    <a href="https://x.com/ziondaman_Sv" target="_blank">Twitter</a>
+    <a href="https://www.linkedin.com/in/ziondaman" target="_blank">LinkedIn</a>
+    <a href="https://ziondaman.itch.io" target="_blank">Itch.io</a>
+    <a href="https://www.youtube.com/@noizsv" target="_blank">YouTube</a>
+  </div>
+
+  <div class="content-wrapper">
+    <div class="about">
+      <p class="section-title">About me</p>
+      <p class="section-text">
+        I am a Swedish programmer and graphic designer. 
+        I have studied game programming at LBS Norra, and in my free 
+        time did freelance graphic design for several people and worked 
+        part-time as a media head for a gaming group called SOF TAC Gaming.
+      </p>
+
+      <div class="skills">
+        <p class="section-title">Skills</p>
+        <ul class="skills-list">
+          <li>Unity / C#</li>
+          <li>HTML / CSS </li>
+          <li>Photoshop / Illustrator</li>
+          <li>Premiere Pro / After Effects</li>
+          <li>Maya / CAD</li>
+          <li>Git / GitHub</li>
+        </ul>
+      </div>
     </div>
+
+    <div class="projects">
+      <a href="Project1.html" class="project-card">
+        <img src="IMG_4912.png" alt="Project 1" />
+        <p class="project-title">Project 1</p>
+      </a>
+      <a href="Project2.html" class="project-card">
+        <img src="GTKIrI6WoAAodaG.jpg" alt="Project 2" />
+        <p class="project-title">Project 2</p>
+      </a>
+      <a href="Project3.html" class="project-card">
+        <img src="Gl-6R5_XUAE_q1t.jpg" alt="Project 3" />
+        <p class="project-title">Project 3</p>
+      </a>
+      <a href="Project4.html" class="project-card">
+        <img src="Gjq5w-PWgAA4akg.png" alt="Project 4" />
+        <p class="project-title">Project 4</p>
+      </a>
+    </div>
+  </div>
+</body>
 </html>
