cad is not real

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li>HTML / CSS </li>
           <li>Photoshop / Illustrator</li>
           <li>Premiere Pro / After Effects</li>
-          <li>Maya / CAD</li>
+          <li>Maya / Fusion 360</li>
           <li>Git / GitHub</li>
         </ul>
       </div>
