FOOTER AND SOME STILE ADDONES

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <p class="section-title">Skills</p>
         <ul class="skills-list">
           <li>Unity / C#</li>
-          <li>HTML / CSS </li>
           <li>Photoshop / Illustrator</li>
           <li>Premiere Pro / After Effects</li>
           <li>Maya / Fusion 360</li>
@@ -62,5 +61,10 @@
       </a>
     </div>
   </div>
+  
+    <footer class="site-footer">
+    <p>DESIGN BY FLESH, PRODUCTION OF MACHINE, PRODUCED BY MAN.</p>
+    <P> - ZIONDAMAN - </P>
+  </footer>
 </body>
 </html>
