--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <!-- Audio with controls for testing (remove 'controls' when done testing) -->
-  <audio id="background-audio" src="background.mp3" loop></audio>
+  <audio id="background-audio" src="background.mp3" type="audio/mpeg" loop></audio>
+
 
   <div class="name-title">
     <p class="name">Zion Martincich</p>
@@ -71,28 +72,17 @@
   </footer>
 
   <!-- Audio playback script -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const audio = document.getElementById('background-audio');
-      audio.volume = 1.0;
-
-      const startAudio = () => {
-        console.log("User interaction detected, attempting to play audio...");
-        audio.play().then(() => {
-          console.log("Audio playback started!");
-        }).catch(err => {
-          console.warn("Audio playback failed:", err);
-        });
-
-        // Remove listeners after first attempt
-        document.removeEventListener('click', startAudio);
-        document.removeEventListener('keydown', startAudio);
-      };
-
-      // Trigger on first click or key press
-      document.addEventListener('click', startAudio);
-      document.addEventListener('keydown', startAudio);
-    });
-  </script>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const audio = document.getElementById('background-audio');
+    const startAudio = () => {
+      audio.play().catch(e => {
+        console.warn('Audio blocked:', e);
+      });
+      window.removeEventListener('click', startAudio);
+    };
+    window.addEventListener('click', startAudio);
+  });
+</script>
 </body>
 </html>
