--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Audio with controls for testing (remove 'controls' when done testing) -->
-  <audio id="background-audio" src="background.mp3" type="audio/mpeg" loop autoplay muted></audio>
+  <audio id="background-audio" src="background.mp3" type="audio/mpeg" loop></audio>
 
 
   <div class="name-title">
