--- a/Project1.Html
+++ b/Project1.Html
@@ -8,8 +8,35 @@
 </head>
 <body>
     <div class="name-title">
-        <p class="name">Project 1</p>
-        <p class="title">Coming Soon...</p>
+        <p class="name">Beaks Per Minute</p>
+        <p class="title">Programer / Debugger </p>
     </div>
+
+    <div class="project-layout">
+        <div class="column">
+            <div class="block">
+                <p class="block-title">Origin Story</p>
+                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="block">
+                <p class="block-title">Features</p>
+                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA </p>
+            </div>
+            <div class="block">
+                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA </p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="photo-block">
+                <img src="bpm-preview.png" alt="Project preview of Beaks Per Minute" />
+            </div>
+            <p class="block-title center-text"> Preview</p>
+        </div>
+    </div>
+
 </body>
 </html>
