some changes not happy but going to push and keep working on it a bit need a small brake

--- a/Project1.Html
+++ b/Project1.Html
@@ -7,36 +7,38 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="name-title">
-        <p class="name">Beaks Per Minute</p>
+    <div style="text-align:left; margin-top: 20px; font-family: SpecialElite;">
+    <a href="index.html" style="color:aliceblue; text-decoration:none;">← Back to home</a>
+    </div>
+
+    <div style="margin-top: 0px;" class="name-title">
+        <p style="margin-top: -30px;" class="name">Beaks Per Minute</p>
         <p class="title">Programer / Debugger </p>
     </div>
 
-    <div class="project-layout">
-        <div class="column">
-            <div class="block">
-                <p class="block-title">Origin Story</p>
-                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA</p>
-            </div>
+<div class="project-layout">
+    <div class="column">
+        <div class="photo-block">
+            <img src="BPM.gif" alt="Animated preview of Beaks Per Minute" />
         </div>
+        <p class="block-title center-text"> Preview</p>
 
-        <div class="column">
-            <div class="block">
-                <p class="block-title">Features</p>
-                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA </p>
-            </div>
-            <div class="block">
-                <p class="block-text">BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA </p>
-            </div>
-        </div>
-
-        <div class="column">
-            <div class="photo-block">
-                <img src="bpm-preview.png" alt="Project preview of Beaks Per Minute" />
-            </div>
-            <p class="block-title center-text"> Preview</p>
+        <div class="block">
+            <p class="block-title">Origin Story</p>
+            <p class="block-text">BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...</p>
         </div>
     </div>
+
+    <div class="column">
+        <div class="block">
+            <p class="block-title">Features</p>
+            <p class="block-text">BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...</p>
+        </div>
+        <div class="block">
+            <p class="block-text">BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...BLA BLA BLA ...</p>
+        </div>
+    </div>
+
 
 </body>
 </html>
