Adding two projects to the list

--- a/Project3.Html
+++ b/Project3.Html
@@ -19,13 +19,13 @@
 <div class="project-layout">
     <div class="column">
         <div class="photo-block">
-            <img src="F-l9Y11XAAA8ktL.jpg" alt="Animated preview of Beaks Per Minute" />
+            <img src="BPM.gif" alt="Animated preview of Beaks Per Minute" />
         </div>
         <p class="block-title center-text"> Preview</p>
 
         <div style="margin-top: 0px;" class="block">
             <p style="margin-top: 0px;" class="block-title">Reslult</p>
-            <p class="block-text">The end result of the whole project was a small game demo with one level and a tutorial level. There are some small bugs you might run into if you're really trying to break the game, but if you just play it casually, there’s no real way to break it.</p>
+            <p class="block-text">The end result of the whole project was a small game demo with one level and a tutorial level. There are some small bugs you might run into if you're really trying to break the game, but if you just play it casually, there’s no real way to break it. After spending a bit more time polishing it, we released the game on Itch.io.</p>
         </div>
     </div>
 
@@ -42,9 +42,10 @@
             <div class="block">
         <p class="block-title">Links</p>
         <ul class="block-text">
-            <li><a href="https://drive.google.com/file/d/1J5hIIEq2_Gk3DN5zoA28jPMhaIGUdTfW/view" target="_blank" style="color: aliceblue;">Download Link</a></li>
+            <li><a href="https://example.com" target="_blank" style="color: aliceblue;">Example Link 1</a></li>
+            <li><a href="https://anotherexample.com" target="_blank" style="color: aliceblue;">Example Link 2</a></li>
         </ul>
-
+        
     </div>
 </div>
 </body>
