--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </a>
       <a href="Project2.html" class="project-card">
         <img src="GTKIrI6WoAAodaG.jpg" alt="Project 2" />
-        <p class="project-title">Project 2</p>
+        <p class="project-title">My Graphic Design Works</p>
       </a>
       <a href="Project3.html" class="project-card">
         <img src="Gl-6R5_XUAE_q1t.jpg" alt="Project 3" />
