some more changes

--- a/Project1.Html
+++ b/Project1.Html
@@ -19,7 +19,7 @@
 <div class="project-layout">
     <div class="column">
         <div class="photo-block">
-            <img src="F-l9Y11XAAA8ktL.jpg" alt="Animated preview of Beaks Per Minute" />
+            <img src="Banner for a.png" alt="Animated preview of Beaks Per Minute" />
         </div>
         <p class="block-title center-text"> Preview</p>
 
