--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="projects">
       <a href="Project1.html" class="project-card">
-        <img src="IMG_4912.png" alt="Project 1" />
+        <img src="BPM.gif" alt="Project 1" />
         <p class="project-title">BEAKS PER MINUTE</p>
       </a>
       <a href="Project2.html" class="project-card">
