--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p class="project-title">My Graphic Design Works</p>
       </a>
       <a href="Project3.html" class="project-card">
-        <img src="Gl-6R5_XUAE_q1t.jpg" alt="Project 3" />
+        <img src="1.png" alt="Project 3" />
         <p class="project-title">Project 3</p>
       </a>
       <a href="Project4.html" class="project-card">
