--- a/Project3.Html
+++ b/Project3.Html
@@ -12,38 +12,39 @@
     </div>
 
     <div style="margin-top: 0px;" class="name-title">
-        <p style="margin-top: -30px;" class="name">Beaks Per Minute</p>
-        <p class="title">Programer / Debugger </p>
+        <p style="margin-top: -30px;" class="name">The Unborn Project</p>
+        <p class="title">Programer / Desinger </p>
     </div>
 
 <div class="project-layout">
     <div class="column">
         <div class="photo-block">
-            <img src="BPM.gif" alt="Animated preview of Beaks Per Minute" />
+            <img src="GPkqkyDW4AAbOnA.png" alt="Animated preview of Beaks Per Minute" />
         </div>
         <p class="block-title center-text"> Preview</p>
 
         <div style="margin-top: 0px;" class="block">
             <p style="margin-top: 0px;" class="block-title">Reslult</p>
-            <p class="block-text">The end result of the whole project was a small game demo with one level and a tutorial level. There are some small bugs you might run into if you're really trying to break the game, but if you just play it casually, there’s no real way to break it. After spending a bit more time polishing it, we released the game on Itch.io.</p>
+            <p class="block-text">The result of all this hard work, sadly, never became a finished project. But it was still something we held close to our hearts. Through this project, we gained valuable programming skills and insight into the world of game development. Even though the end result was a half-finished game, there was still a lot of love put into it.</p>
         </div>
     </div>
 
     <div class="column">
         <div class="block">
             <p class="block-title">Origin Story</p>
-            <p class="block-text">During my education at LBS Norra, we had a game jam each term, and in 2025 I took part in the LBS Game Jam with a small team of two other game developers and three artists. Together, we developed a small rhythm game demo called “Beats Per Minut.” A rhythm game where you fight a boss while catching balls and avoiding bombs.</p>
+            <p class="block-text">Unborn was a project where me and my workmate Einar Lundqvist wanted to push our coding capabilities as far as possible—and so Unborn was made. A game project where the focus was on programming and asset creation. The game was set in a strange world where you played as a fetus completing tasks and changing the fate of your life.</p>
         </div>
         <div class="block">
             <p class="block-title">My Job</p>
-            <p class="block-text">My job was mainly bug hunting and fixing, but I also helped develop smaller systems. I spent most of my time with the team building things like the base for hit registration, a health system, and other small features. I also fixed bugs—especially the ones others didn’t have time to fix or couldn’t handle.</p>
+            <p class="block-text">My job was to program and create character assets, along with some light 3D modeling and UV map fixing. I spent a lot of time programming small systems I was really proud of. I built an interactive dialogue system, and also worked on character assets. I helped with modeling—cleaning up models and fixing UVs when needed.</p>
         </div>
 
             <div class="block">
         <p class="block-title">Links</p>
         <ul class="block-text">
-            <li><a href="https://example.com" target="_blank" style="color: aliceblue;">Example Link 1</a></li>
-            <li><a href="https://anotherexample.com" target="_blank" style="color: aliceblue;">Example Link 2</a></li>
+            <li><a href="https://ejnar-portfolio.netlify.app/" target="_blank" style="color: aliceblue;">Einar portfolio</a></li>
+            <li><a href="https://x.com/Ejnar40" target="_blank" style="color: aliceblue;">Einar X</a></li>
+            <li><a href="https://x.com/ziondaman_Sv/status/1812089233953235169" target="_blank" style="color: aliceblue;">Gamde Dev Video</a></li>
         </ul>
         
     </div>
