--- a/Project4.Html
+++ b/Project4.Html
@@ -12,39 +12,32 @@
     </div>
 
     <div style="margin-top: 0px;" class="name-title">
-        <p style="margin-top: -30px;" class="name">Beaks Per Minute</p>
-        <p class="title">Programer / Debugger </p>
+        <p style="margin-top: -30px;" class="name">RPG</p>
+        <p class="title">Programer / Desinger </p>
     </div>
 
 <div class="project-layout">
     <div class="column">
         <div class="photo-block">
-            <img src="BPM.gif" alt="Animated preview of Beaks Per Minute" />
+            <img src="345444444444444444444444.png" alt="Animated preview of Beaks Per Minute" />
         </div>
         <p class="block-title center-text"> Preview</p>
 
         <div style="margin-top: 0px;" class="block">
             <p style="margin-top: 0px;" class="block-title">Reslult</p>
-            <p class="block-text">The end result of the whole project was a small game demo with one level and a tutorial level. There are some small bugs you might run into if you're really trying to break the game, but if you just play it casually, there’s no real way to break it. After spending a bit more time polishing it, we released the game on Itch.io.</p>
+            <p class="block-text">The end result was a small game demo that was enough to earn a B. Still, I wish I had more time to add more systems—like items or more mechanics beyond just attacking. Sadly, that didn’t happen, and we ended up making a quick and short demo instead.</p>
         </div>
     </div>
 
     <div class="column">
         <div class="block">
             <p class="block-title">Origin Story</p>
-            <p class="block-text">During my education at LBS Norra, we had a game jam each term, and in 2025 I took part in the LBS Game Jam with a small team of two other game developers and three artists. Together, we developed a small rhythm game demo called “Beats Per Minut.” A rhythm game where you fight a boss while catching balls and avoiding bombs.</p>
+            <p class="block-text">For another assignment while I was at LBS Norra, we had to make an RPG. So me and a few mates decided to make a simple Undertale clone. The story was simple: the king accidentally opened the gate and let the monsters in—and now you have to kill them.</p>
         </div>
         <div class="block">
             <p class="block-title">My Job</p>
-            <p class="block-text">My job was mainly bug hunting and fixing, but I also helped develop smaller systems. I spent most of my time with the team building things like the base for hit registration, a health system, and other small features. I also fixed bugs—especially the ones others didn’t have time to fix or couldn’t handle.</p>
+            <p class="block-text">I ended up doing most of the project (a bit too hands-on, to be honest), but I really enjoyed it. I made a dialogue system that was also customizable so anyone could use it. I also made the movement system and the character assets for the king and the boss. The attack system was done by a friend, and I just helped fix bugs and cleaned up small imperfections.</p>
         </div>
-
-            <div class="block">
-        <p class="block-title">Links</p>
-        <ul class="block-text">
-            <li><a href="https://example.com" target="_blank" style="color: aliceblue;">Example Link 1</a></li>
-            <li><a href="https://anotherexample.com" target="_blank" style="color: aliceblue;">Example Link 2</a></li>
-        </ul>
         
     </div>
 </div>
