--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <p class="project-title">Unborn Project</p>
       </a>
       <a href="Project4.html" class="project-card">
-        <img src="Gjq5w-PWgAA4akg.png" alt="Project 4" />
-        <p class="project-title">Project 4</p>
+        <img src="Deltatrun.png" alt="Project 4" />
+        <p class="project-title">RPG</p>
       </a>
     </div>
   </div>
