--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     <div class="about">
       <p class="section-title">About me</p>
       <p class="section-text">
-        I am a Swedish programmer and graphic designer. 
-        I have studied game programming at LBS Norra, and in my free 
-        time did freelance graphic design for several people and worked 
-        part-time as a media head for a gaming group called SOF TAC Gaming.
+I am a Swedish programmer and graphic designer.
+I studied game programming at LBS Norra, and in my free time, I’ve done freelance graphic design for several clients. I also worked part-time as the media head for a gaming group called SOF TAC Gaming.
       </p>
 
       <div class="skills">
