--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Zion Martincich</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="Gjq5w-PWgAA4akg.png">
 </head>
 <body>
-  <!-- Audio with controls for testing (remove 'controls' when done testing) -->
+  <!-- Audio with controls for testing (remove 'controls' when done testing) (ye i never did that)-->
+  <img class="background-pixel" src="Background.gif" alt="" />
   <audio id="background-audio" src="background.mp3" type="audio/mpeg" loop></audio>
 
-
+<!-- i want you to know babey-->
   <div class="name-title">
     <p class="name">Zion Martincich</p>
     <p class="title">Programer / Graphics Arts</p>
   </div>
 
+  <!-- i love you like a love song babey-->
   <div class="social-icons">
     <a href="https://github.com/ZiondamanSE" target="_blank">GitHub</a>
     <a href="https://x.com/ziondaman_Sv" target="_blank">Twitter</a>
@@ -23,7 +26,7 @@
     <a href="https://ziondaman.itch.io" target="_blank">Itch.io</a>
     <a href="https://www.youtube.com/@noizsv" target="_blank">YouTube</a>
   </div>
-
+  <!-- aha-  i love you like a love song babey-->
   <div class="content-wrapper">
     <div class="about">
       <p class="section-title">About me</p>
@@ -32,6 +35,7 @@ I am a Swedish programmer and graphic designer.
 I studied game programming at LBS Norra, and in my free time, I’ve done freelance graphic design for several clients. I also worked part-time as the media head for a gaming group called SOF TAC Gaming.
       </p>
 
+        <!-- i keep hitting on rep-rep-repeat -->
       <div class="skills">
         <p class="section-title">Skills</p>
         <ul class="skills-list">
