i fucked up we got to go bald

--- a/Project2.Html
+++ b/Project2.Html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+    <img class="background-pixel" src="Background.gif" alt="" />
+    
     <div style="text-align:left; margin-top: 20px; font-family: SpecialElite;">
     <a href="index.html" style="color:aliceblue; text-decoration:none;">← Back to home</a>
     </div>
