404 site thing i dont man

--- a/404.html
+++ b/404.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Zion Martincich</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="Gjq5w-PWgAA4akg.png">
 </head>
 <body>
-    <h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa</h1>
+  <img class="background-pixel" src="Background.gif" alt="" />
+
+  <div class="name-title">
+    <p style="font-family: SpecialElite;" class="name">404 THE SITE IS NON EXISTENT</p>
+    <p style="margin-top: 5px; font-family: SpecialElite; font-size: 30px;" class="name">You are not supposed to be here.</p>
+
+    <div class="gif-row">
+      <img src="404 gif.gif" alt="404" class="error-gif" />
+      <div class="spacer"></div>
+      <img src="404 gif.gif" alt="404" class="error-gif" />
+      <div class="spacer"></div>
+      <img src="404 gif.gif" alt="404" class="error-gif" />
+    </div>
+
+    <!-- Back to Home Link -->
+<!-- Back to Home Link -->
+<div style="text-align: center; margin-top: 80px; font-family: SpecialElite; font-size: 30px;">
+  <a href="index.html" style="color:aliceblue; text-decoration:none;">✨✨ Back to home ✨✨</a>
+</div>
+
+  </div>
 </body>
 </html>
